# klara.works-rev1

./: .gitignore  Dockerfile  Makefile.toml  README.md  cloudbuild-dev.yaml  cloudbuild-prod.yaml  cloudbuild.yaml
client/: package.json  tsconfig.json  webpack.config.js  webpack.config.ts
client/src/: index.html  index.tsx  style.css  types.ts  typings.d.ts
client/src/components/: About.css  About.tsx  App.css  App.tsx  Home.css  Home.tsx  Nav.css  Nav.tsx  NavLink.css  NavLink.tsx  Works.css  Works.tsx  WorksDetail.tsx  WorksSummary.css  WorksSummary.tsx
client/src/hooks/: page.tsx
client/src/lib/: req.ts
kustomize/: cert.yaml  deployment.yaml  ingress.yaml  service.yaml
kustomize/base/: cert.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml
kustomize/overlays/dev/: cert.yaml  deployment.yaml  ingress.yaml  kustomization.yaml
kustomize/overlays/prod/: cert.yaml  deployment.yaml  ingress.yaml  kustomization.yaml
server/: .hlint.yaml  klara-works.cabal  server.cabal
server/app/: Main.hs
server/src/: KlaraWorks.hs  Main.hs
server/src/KlaraWorks/: Env.hs  Html.hs  Works.hs
terraform/: cloud-build.tf  domain.tf  gke.tf  locals.tf  main.tf  variables.tf
works/20190630-girl/: meta.yaml
works/20190715-shiranui/: meta.yaml
works/20190719-shiranui/: meta.yaml
works/20200112-yukikaze/: meta.yaml
works/20200125-hibiki/: meta.yaml
works/20200215-hamakaze/: meta.yaml
works/20200228-lady/: meta.yaml
