name:           klara-works
version:        0.1.0.0
description:    prototype No.2
homepage:       https://github.com/kirisaki/prototip-2.kirisaki.dev#readme
bug-reports:    https://github.com/kirisaki/prototip-2.kirisaki.dev/issues
author:         Akihito KIRISAKI
maintainer:     kirisaki@klaraworks.net
copyright:      (c) Akihito KIRISAKI
license:        BSD3
cabal-version:  >= 1.8
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/kirisaki/prototip-2.kirisaki.dev

library
  exposed-modules:
      KlaraWorks
      KlaraWorks.Html
      KlaraWorks.Works
  other-modules:
      Paths_klara_works
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , aeson
    , bytestring
    , case-insensitive
    , extensible
    , http-types
    , lens
    , lucid
    , servant
    , servant-server
    , servant-lucid
    , text
    , containers
    , wai
    , wai-extra
    , warp
  default-language: Haskell2010

executable server
  main-is: Main.hs
  other-modules:
      Paths_klara_works
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , aeson
    , klara-works
    , bytestring
    , case-insensitive
    , extensible
    , http-types
    , lens
    , lucid
    , servant
    , servant-server
    , servant-lucid
    , text
    , containers
    , wai
    , wai-extra
    , warp
  default-language: Haskell2010

test-suite server-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_server
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , aeson
    , bytestring
    , extensible
    , case-insensitive
    , http-types
    , lens
    , lucid
    , servant
    , servant-server
    , servant-lucid
    , text
    , containers
    , wai
    , wai-extra
    , warp
  default-language: Haskell2010
