name:           klara-works
version:        0.1.0.0
description:    prototype No.2
homepage:       https://github.com/kirisaki/prototip-2.kirisaki.dev#readme
bug-reports:    https://github.com/kirisaki/prototip-2.kirisaki.dev/issues
author:         Akihito KIRISAKI
maintainer:     kirisaki@klaraworks.net
copyright:      (c) Akihito KIRISAKI
license:        BSD3
cabal-version:  >= 1.8
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/kirisaki/prototip-2.kirisaki.dev

library
  exposed-modules:
      KlaraWorks
      KlaraWorks.Html
      KlaraWorks.Works
      KlaraWorks.Env
  other-modules:
      Paths_klara_works
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , aeson
    , bytestring
    , case-insensitive
    , extensible
    , directory
    , hashable
    , hip
    , http-types
    , JuicyPixels
    , lens
    , lucid
    , mtl
    , path
    , path-io
    , safe-exceptions
    , servant
    , servant-server
    , servant-lucid
    , text
    , containers
    , wai
    , wai-extra
    , warp
    , yaml
  default-language: Haskell2010

executable server
  main-is: Main.hs
  other-modules:
      Paths_klara_works
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , aeson
    , klara-works
    , bytestring
    , case-insensitive
    , extensible
    , directory
    , hashable
    , hip
    , http-types
    , JuicyPixels
    , lens
    , lucid
    , mtl
    , path
    , path-io
    , safe-exceptions
    , servant
    , servant-server
    , servant-lucid
    , text
    , containers
    , wai
    , wai-extra
    , warp
    , yaml
  default-language: Haskell2010

test-suite server-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_klara_works
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , aeson
    , bytestring
    , extensible
    , directory
    , case-insensitive
    , hashable
    , hip
    , http-types
    , JuicyPixels
    , lens
    , lucid
    , mtl
    , path
    , path-io
    , safe-exceptions
    , servant
    , servant-server
    , servant-lucid
    , text
    , containers
    , wai
    , wai-extra
    , warp
    , yaml
  default-language: Haskell2010
